MAINTAINERCLEANFILES = Makefile.in

AM_CPPFLAGS = \
-I$(top_srcdir)/ecss/lib \
-I$(top_srcdir)/edom/lib \
-I$(top_srcdir)/esvg/lib \
-I$(top_builddir)/esvg/lib \
-I$(top_srcdir)/esvg/lib/types \
-DENESIM_EXTENSION \
-DESVG_BUILD \
@ESVG_CFLAGS@

noinst_LTLIBRARIES = libesvg_elements.la

libesvg_elements_la_SOURCES = \
esvg_element.c \
esvg_element_a.c \
esvg_element_animate.c \
esvg_animate_base.c \
esvg_element_animate_transform.c \
esvg_element_animation.c \
esvg_element_circle.c \
esvg_element_clip_path.c \
esvg_element_defs.c \
esvg_element_ellipse.c \
esvg_element_g.c \
esvg_element_gradient.c \
esvg_element_image.c \
esvg_element_line.c \
esvg_element_linear_gradient.c \
esvg_element_path.c \
esvg_element_polygon.c \
esvg_element_polyline.c \
esvg_element_radial_gradient.c \
esvg_element_rect.c \
esvg_element_script.c \
esvg_element_set.c \
esvg_element_stop.c \
esvg_element_style.c \
esvg_element_svg.c \
esvg_element_text.c \
esvg_element_use.c \
esvg_element_video.c \
esvg_paint_server.c \
esvg_referenceable.c \
esvg_renderable.c \
esvg_animate_base.h \
esvg_element_a.h \
esvg_element_animate.h \
esvg_element_animate_transform.h \
esvg_element_animation.h \
esvg_element_circle.h \
esvg_element_clip_path.h \
esvg_element_defs.h \
esvg_element_ellipse.h \
esvg_element_g.h \
esvg_element_gradient.h \
esvg_element.h \
esvg_element_image.h \
esvg_element_linear_gradient.h \
esvg_element_line.h \
esvg_element_path.h \
esvg_element_polygon.h \
esvg_element_polyline.h \
esvg_element_radial_gradient.h \
esvg_element_rect.h \
esvg_element_script.h \
esvg_element_set.h \
esvg_element_stop.h \
esvg_element_style.h \
esvg_element_svg.h \
esvg_element_text.h \
esvg_element_use.h \
esvg_element_video.h \
esvg_paint_server.h \
esvg_private_a.h \
esvg_private_animate_base.h \
esvg_private_animate.h \
esvg_private_animate_transform.h \
esvg_private_animation.h \
esvg_private_clip_path.h \
esvg_private_element.h \
esvg_private_gradient.h \
esvg_private_paint_server.h \
esvg_private_renderable_behaviour.h \
esvg_private_renderable.h \
esvg_private_stop.h \
esvg_private_style.h \
esvg_private_svg.h \
esvg_private_video.h \
esvg_referenceable.h \
esvg_renderable.h

libesvg_elements_la_LIBADD =
